<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/activity_vertical_margin_16"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_16">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/app_logo" />
        </FrameLayout>

        <TextView
            android:id="@+id/start_welcome_text"
            style="@style/RobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_40"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_24"
            android:layout_marginRight="@dimen/activity_horizontal_margin_24"
            android:gravity="left"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:lineSpacingMultiplier="1.5"
            android:textSize="@dimen/text_14sp" />

        <Button
            android:id="@+id/start_registration_button"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_screen_registration_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_2"
            android:gravity="center"
            android:text="@string/start_screen_or"
            android:textSize="@dimen/text_24sp" />

        <Button
            android:id="@+id/parent_start_login_button"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_screen_login_button" />
    </LinearLayout>


</FrameLayout>