<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <ProgressBar
        android:id="@+id/registration_progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingTop="130dp"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin_16"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/app_logo"/>
            </FrameLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/code_email_field"
                style="@style/EditTextStyle.Inverse.Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/code_password_field"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/code_password_field"
                style="@style/EditTextStyle.Inverse.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/code_confirm_password_field"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/code_confirm_password_field"
                style="@style/EditTextStyle.Inverse.ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/code_code_field"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/code_code_field"
                style="@style/EditTextStyle.Inverse.Code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                />

            <Button
                android:id="@+id/code_login"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_login"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/code_if_need_code"
            android:textSize="@dimen/text_14sp"/>

            <Button
            android:id="@+id/code_generate_code"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_send_again"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>